# ndoptimize

./: README.md  pyproject.toml
.github/workflows/: black.yml  publish.yml
docs/: conf.py  index.rst
optimize/: __init__.py
