[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "optimize"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "Numba-accelerated minimization of objective functions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "numba",
    "astropy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
]
doc = [
    "pytest",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/sun-data/optimize"
Documentation = "https://sun-data-optimize.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["optimize"]

[tool.setuptools_scm]
